new ClassPrinter implemenation work in progress